--- a/src/app/ana/ana.component.html
+++ b/src/app/ana/ana.component.html
@@ -1,75 +1,96 @@
 <body>
-  <div class="row" style="margin-top: 50px; background-color: lightsteelblue">
+  <div class="row" style="background-color: lightcyan; padding-top: 20px">
     <div class="col-lg-1"></div>
-
     <div class="col-lg-2">
       <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label"
-          >Aranan Message Verisi</label
+          ><b>Aranan Message Verisi</b></label
         >
-        <input
-          type="email"
-          class="form-control"
-          id="exampleFormControlInput1"
-          value="Hepsi"
-        />
+        <form action="">
+          <input
+            type="email"
+            class="form-control"
+            id="exampleFormControlInput1"
+            value="Hepsi"
+          />
+        </form>
       </div>
     </div>
     <div class="col-lg-2">
       <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label"
-          >Aranan Type Verisi</label
+          ><b>Aranan Type Verisi</b></label
         >
-        <input
-          type="email"
-          class="form-control"
-          id="exampleFormControlInput1"
-          value="Hepsi"
-        />
+        <form action="">
+          <input
+            type="email"
+            class="form-control"
+            id="exampleFormControlInput1"
+            value="Hepsi"
+          />
+        </form>
       </div>
     </div>
     <div class="col-lg-2">
       <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label"
-          >Aranan Timestamp Verisi</label
+          ><b>Aranan Timestamp Verisi</b></label
         >
-        <input
-          type="email"
-          class="form-control"
-          id="exampleFormControlInput1"
-          value="Hepsi"
-        />
+        <form action="">
+          <input
+            type="email"
+            class="form-control"
+            id="exampleFormControlInput1"
+            value="Hepsi"
+          />
+        </form>
       </div>
     </div>
     <div class="col-lg-2">
       <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label"
-          >Aranan Description Verisi</label
+          ><b>Aranan Description Verisi</b></label
         >
-        <input
-          type="email"
-          class="form-control"
-          id="exampleFormControlInput1"
-          value="Hepsi"
-        />
+        <form action="">
+          <input
+            type="email"
+            class="form-control"
+            id="exampleFormControlInput1"
+            value="Hepsi"
+          />
+        </form>
       </div>
     </div>
     <div class="col-lg-2">
       <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label"
-          >Aranan Flight_id Verisi</label
+          ><b>Aranan Flight_id Verisi</b></label
         >
-        <input
-          type="email"
-          class="form-control"
-          id="exampleFormControlInput1"
-          value="Hepsi"
-        />
+        <form action="">
+          <input
+            type="email"
+            class="form-control"
+            id="exampleFormControlInput1"
+            value="Hepsi"
+          />
+        </form>
       </div>
     </div>
-
     <div class="col-lg-1"></div>
+    <div style="text-align: center">
+      <button type="button" class="btn btn-secondary">Secondary</button>
+    </div>
   </div>
 
-  <div>sonuclar burda olacak bakalım olacakmı</div>
+  <div style="margin-top: 20px">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4"></div>
+        <div class="col-lg-4" style="text-align: center">
+          <h3>SONUÇ</h3>
+        </div>
+        <div class="col-lg-4"></div>
+      </div>
+    </div>
+  </div>
 </body>
