--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body style="background-color: lightsteelblue">
+  <body>
     <div style="background-color: midnightblue">
       <div class="container">
         <div class="row">
