--- a/src/app/ana/ana.component.html
+++ b/src/app/ana/ana.component.html
@@ -1,5 +1,5 @@
 <body>
-  <div class="row" style="background-color: lightcyan; padding-top: 20px">
+  <div class="row" style="background-color: slategray; padding-top: 20px">
     <div class="col-lg-1"></div>
     <div class="col-lg-2">
       <div class="mb-3">
@@ -8,7 +8,7 @@
         >
         <form action="">
           <input
-            type="email"
+            type="text"
             class="form-control"
             id="exampleFormControlInput1"
             value="Hepsi"
@@ -22,12 +22,26 @@
           ><b>Aranan Type Verisi</b></label
         >
         <form action="">
-          <input
-            type="email"
-            class="form-control"
-            id="exampleFormControlInput1"
-            value="Hepsi"
-          />
+          <div ngbDropdown class="dropdown">
+            <button
+              ngbDropdownToggle
+              class="btn btn-secondary dropdown-toggle"
+              type="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              Dropdown button
+            </button>
+            <ul ngbDropdownMenu class="dropdown-menu">
+              <div *ngFor="let typeveri of types">
+                <li>
+                  <a ngbDropdownItem class="dropdown-item" href="#">{{
+                    typeveri
+                  }}</a>
+                </li>
+              </div>
+            </ul>
+          </div>
         </form>
       </div>
     </div>
@@ -38,7 +52,7 @@
         >
         <form action="">
           <input
-            type="email"
+            type="text"
             class="form-control"
             id="exampleFormControlInput1"
             value="Hepsi"
@@ -53,7 +67,7 @@
         >
         <form action="">
           <input
-            type="email"
+            type="text"
             class="form-control"
             id="exampleFormControlInput1"
             value="Hepsi"
@@ -68,7 +82,7 @@
         >
         <form action="">
           <input
-            type="email"
+            type="text"
             class="form-control"
             id="exampleFormControlInput1"
             value="Hepsi"
@@ -78,18 +92,43 @@
     </div>
     <div class="col-lg-1"></div>
     <div style="text-align: center">
-      <button type="button" class="btn btn-secondary">Secondary</button>
+      <button style="margin-bottom: 10px" type="button" class="btn btn-primary">
+        Sonuçlar
+      </button>
     </div>
   </div>
 
-  <div style="margin-top: 20px">
+  <div style="background-color: rgb(232, 234, 246)">
     <div class="container">
       <div class="row">
-        <div class="col-lg-4"></div>
-        <div class="col-lg-4" style="text-align: center">
-          <h3>SONUÇ</h3>
+        <h2 style="color: midnightblue"><i>ARAMA SONUCU ÇIKAN SONUÇLAR</i></h2>
+        <br />
+        <br />
+        <br />
+
+        <div class="table-responsive">
+          <table class="table table-striped table-sm">
+            <thead>
+              <tr>
+                <th scope="col">Message</th>
+                <th scope="col">Type</th>
+                <th scope="col">Timestamp</th>
+                <th scope="col">Description</th>
+                <th scope="col">Flight_id</th>
+              </tr>
+            </thead>
+            <!--dongu tbody ye yazılmalıdır kı tr dongude olsun-->
+            <tbody>
+              <tr *ngFor="let veri of dataSee">
+                <td>{{ veri.message }}</td>
+                <td>{{ veri.type }}</td>
+                <td>{{ veri.timestamp }}</td>
+                <td>{{ veri.description }}</td>
+                <td>{{ veri.flight_id }}</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
-        <div class="col-lg-4"></div>
       </div>
     </div>
   </div>
