--- a/src/app/ana/ana.component.html
+++ b/src/app/ana/ana.component.html
@@ -6,14 +6,13 @@
         <label for="exampleFormControlInput1" class="form-label"
           ><b>Aranan Message Verisi</b></label
         >
-        <form action="">
-          <input
-            type="text"
-            class="form-control"
-            id="exampleFormControlInput1"
-            value="Hepsi"
-          />
-        </form>
+        <input
+          type="text"
+          class="form-control"
+          id="exampleFormControlInput1"
+          value="Hepsi"
+          (keyup)="onkeyMesaj($event)"
+        />
       </div>
     </div>
     <div class="col-lg-2">
