--- a/src/app/ana/ana.component.html
+++ b/src/app/ana/ana.component.html
@@ -104,7 +104,42 @@
     </div>
   </div>
 
-  <div style="background-color: rgb(232, 234, 246)">
+  <div *ngIf="asil" style="background-color: rgb(232, 234, 246)">
+    <div class="container">
+      <div class="row">
+        <h2 style="color: midnightblue"><i>DOSYANIN HEPSİ</i></h2>
+        <br />
+        <br />
+        <br />
+
+        <div class="table-responsive">
+          <table class="table table-striped table-sm">
+            <thead>
+              <tr>
+                <th scope="col">Message</th>
+                <th scope="col">Type</th>
+                <th scope="col">Timestamp</th>
+                <th scope="col">Description</th>
+                <th scope="col">Flight_id</th>
+              </tr>
+            </thead>
+            <!--dongu tbody ye yazılmalıdır kı tr dongude olsun-->
+            <tbody>
+              <tr *ngFor="let veri of dataSee">
+                <td>{{ veri.message }}</td>
+                <td>{{ veri.type }}</td>
+                <td>{{ veri.timestamp }}</td>
+                <td>{{ veri.description }}</td>
+                <td>{{ veri.flight_id }}</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div *ngIf="ek" style="background-color: rgb(232, 234, 246)">
     <div class="container">
       <div class="row">
         <h2 style="color: midnightblue"><i>ARAMA SONUCU ÇIKAN SONUÇLAR</i></h2>
@@ -125,7 +160,7 @@
             </thead>
             <!--dongu tbody ye yazılmalıdır kı tr dongude olsun-->
             <tbody>
-              <tr *ngFor="let veri of dataSee">
+              <tr *ngFor="let veri of guncel_veri">
                 <td>{{ veri.message }}</td>
                 <td>{{ veri.type }}</td>
                 <td>{{ veri.timestamp }}</td>
