--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,9 @@
         <div class="row">
           <div class="col-lg-4 col-md-12"></div>
           <div class="col-lg-4 col-md-12">
-            <h1 style="text-align: center; color: white"><i>- TİTRA -</i></h1>
+            <h1 style="text-align: center; color: white">
+              <i> --- TİTRA --- </i>
+            </h1>
           </div>
           <div class="col-lg-4 col-md-12"></div>
         </div>
